2012-12-24: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* ZipArchive.m remove a bogus check, and fix comment
	* ArchiveService.[h|m], ZipperInfo.plist, LhaArchive.[h|m]
	  Add creation of LHA Archives

2012-12-23: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* ArchiveService.[h|m], TarArchive.[h|m]
	* Allow creating of tar.gz and tar.bz2 archives
	* English.lproj/Preferences.nib, Resources/Preferences.gorm,
	  Preferences.[h|m], PreferencesController.[h|m],
	  ZipperInfo.plist
	  Also configure zip binary in Preferences in addition
	  to the unzip binary, and add Service to create zip files

2012-08-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GzipArchive.m
	* LhaArchive.m
	* LzxArchive.m
	* RarArchive.m
	* SevenZipArchive.m
	* TarArchive.m
	* ZipArchive.m
	Protect filenames to be extracted to be counted as 
	parameters of the unzipping tools

2012-07-12 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* ZipperDocument.m
	  Add Action methods to (de)selectAll:
	* Resources/ZipperDocument.gorm
	  Allow Empty selection
	* Resources/MainMenu.gorm
	  add Edit submenu with entries to (de)select All

2012-04-21 Riccardo Mottola <rm@gnu.org>

	* PreferencesController.m
	send perform close and trap close and stop modal
	(on Macintosh otherwise the close button would not stop modal)

2012-04-20 Riccardo Mottola <rm@gnu.org>

	* PreferencesController.[h,m]
	Set textfields to empty string if the value is nil.

	* ZipperDocument.m
	Define sel_isEqual replacement for old Mac runtimes.

	* FileInfo.m
	Append file name to path by using the appropriate method.

2012-04-20 Riccardo Mottola <rm@gnu.org>

	* TarArchive.m:
	Swap order of arguments and skip empty arguments which confuse
	BSD tar.

	* FileInfo.m
	Fix unreliable parsing of paths (filename contained in folders).

2012-02-29 Riccardo Mottola <rm@gnu.org>

	* ZipperCell.[h,m]
	Do not use private drawAttributedText. Add boilerplate.

2012-02-25 Riccardo Mottola <rm@gnu.org>
