@@ -32,5 +32,7 @@
 	error:(NSString **)error;
 - (void)createZipArchive:(NSPasteboard *)pboard userData:(NSString *)userData
 	error:(NSString **)error;
+- (void)create7zArchive:(NSPasteboard *)pboard userData:(NSString *)userData
+	error:(NSString **)error;
 
 @end
