@@ -26,14 +26,39 @@
 #import "TarArchive.h"
 #import "ZipArchive.h"
 #import "LhaArchive.h"
+#import "SevenZipArchive.h"
 
 @interface ArchiveService (PrivateAPI)
 - (void)createLhaArchiveForFiles:(NSArray *)filenames archiveType: (NSString *) archiveType;
 - (void)createTarArchiveForFiles:(NSArray *)filenames archiveType: (NSString *) archiveType;
 - (void)createZipArchiveForFiles:(NSArray *)filenames archiveType: (NSString *) archiveType;
+- (void)create7zArchiveForFiles:(NSArray *)filenames archiveType: (NSString *) archiveType;
 @end
 
 @implementation ArchiveService : NSObject
+
+- (void)create7zArchive:(NSPasteboard *)pboard userData:(NSString *)userData
+	error:(NSString **)error;
+{
+	NSArray *types;
+	id filenames;
+	
+	types = [pboard types];
+	if ([types containsObject:NSFilenamesPboardType] == NO)
+	{
+		*error = @"We expect filenames on the pasteboard!";
+		return;
+	}
+	
+	filenames = [pboard propertyListForType:NSFilenamesPboardType];
+	if (filenames == nil)
+	{
+		*error = @"could not read filenames off the pasteboard!";
+		return;
+	}
+	
+	[self create7zArchiveForFiles:filenames archiveType:nil];
+}
 
 - (void)createLhaArchive:(NSPasteboard *)pboard userData:(NSString *)userData
 	error:(NSString **)error;
@@ -168,6 +193,20 @@
 	     NSString *archiveFile = [panel filename];
 	     // create the archive
 	     [LhaArchive createArchive:archiveFile withFiles:filenames archiveType:archiveType];
+	  }
+}
+- (void)create7zArchiveForFiles:(NSArray *)filenames archiveType: (NSString *) archiveType;
+{
+	int rc;
+	
+	NSSavePanel *panel = [NSSavePanel savePanel];
+	[panel setTitle:@"Archive destination"];
+	rc = [panel runModalForDirectory:NSHomeDirectory() file:nil];
+	if (rc == NSOKButton)
+	  {
+	     NSString *archiveFile = [panel filename];
+	     // create the archive
+	     [SevenZipArchive createArchive:archiveFile withFiles:filenames archiveType:archiveType];
 	  }
 }
 @end
