@@ -21,6 +21,10 @@
 	[self registerFileExtension:@"7za" forArchiveClass:self];
 }
 
++ (NSString *)archiveExecutable
+{
+	return [Preferences sevenZipExecutable];
+}
 + (NSString *)unarchiveExecutable
 {
 	return [Preferences sevenZipExecutable];
@@ -92,6 +96,41 @@
 	lines = [lines subarrayWithRange:NSMakeRange(0, [lines count] - 3)];
     
     return [self listSevenZipContents:lines];
+}
+
+//------------------------------------------------------------------------------
+// creating archives
+//------------------------------------------------------------------------------
++ (void)createArchive:(NSString *)archivePath withFiles:(NSArray *)filenames archiveType: (NSString *) archiveType
+{
+        NSEnumerator *filenameCursor;
+        NSString *filename;
+        NSString *workdir;
+        NSMutableArray *arguments;
+
+        // make sure archivePath has the correct suffix
+        if ([archivePath hasSuffix:@".7z"] == NO)
+          {
+            archivePath = [archivePath stringByAppendingString:@".7z"];
+          }
+        // build arguments for commandline: 7z a filename <list of files>
+        arguments = [NSMutableArray array];
+        [arguments addObject:@"a"];
+        [arguments addObject:archivePath];
+
+        // filenames contains absolute paths, convert them to relative paths. This works
+        // because you can select only files/directories below a current directory in
+        // GWorkspace so all the files *have* to have a common filesystem root.
+        filenameCursor = [filenames objectEnumerator];
+        while ((filename = [filenameCursor nextObject]) != nil)
+        {
+                [arguments addObject:[filename lastPathComponent]];
+        }
+
+        // change into this directory when running the task
+        workdir = [[filenames objectAtIndex:0] stringByDeletingLastPathComponent];
+
+        [self runArchiverWithArguments:arguments inDirectory:workdir];
 }
 
 //------------------------------------------------------------------------------
